# MatmulBench

./: pyproject.toml
src/matmulbench/: __main__.py
