[project]
name = "matmulbench"
version = "0.1.0"
description = ""
authors = [
    {name = "kyv001",email = "kyvyang@foxmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.7.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "matmulbench", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://mirrors.aliyun.com/pytorch-wheels/"
priority = "primary"

[[tool.poetry.source]]
name = "pip"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "primary"
